--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-#myInput {
-    box-sizing: border-box;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-  }
+body {
+    font-family: Arial, Helvetica, sans-serif
+}
 
-  #myInput:focus {outline: 3px solid #ddd;}
+
+
+label {
+    font-weight: 700;
+    color: #767676;
+}
