--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,94 @@
-body {
-    font-family: Arial, Helvetica, sans-serif
+*{
+  box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #767676;
+}
+
+.well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  width: 58.33333333333%;
+  float: right;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  min-width: 0;
+}
+
+legend {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: inherit;
+  color: #333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+  padding-inline-start: 2px;
+  padding-inline-end: 2px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
 
 
 label {
     font-weight: 700;
     color: #767676;
+    text-align: right;
+    margin-bottom: 0;
+    padding-top: 7px;
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
+
+.col-md-4 {
+  width: 33.333333333333%;
+  position: relative;
+  float: left;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.form-control {
+  border-width: 1px;
+  box-shadow: none;
+  display: block;
+  width: 66%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #cbd5dd;
+  border-radius: 4px;
+}
+
+.select2-container--default .select2-selection--single{
+  border: 1px solid #cbd5dd;
+}
+
+.select2-container .select2-selection--single {
+  height: 34px;
+}
+
